--- a/gb/18/3/3/n10187720.md
+++ b/gb/18/3/3/n10187720.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fhwnic3872/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fhwnic3872/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fhwnic3872/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵触动灵魂 康州斯坦福观众感动落泪</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/03/180303004933100055-600x400.jpg" />
 <h6>美国康州斯坦福市派雷斯剧院夜景。（卫泳／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2018年03月03日讯】（大纪元美国斯坦福记者站报导）3月2日，美国东北部地区遭遇罕见的气旋风暴，康州的<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%B8%82.md#1">斯坦福市</a>（Stamford）出现强风伴雨雪的天气。可是如此恶劣的天气也难以阻挡当地观众争相一睹“世界第一秀”的热情。当晚，美国<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在派雷斯剧院（Palace Theater）上演了第二场演出，加座卖的门票仍然全部售罄。</p>
-<p>要问为何<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出如此吸引人？看完神韵演出后的斯坦福地区主流界观众会告诉你：“她触动人的灵魂”、“演出美得让我流泪”、“扣人心弦”、“让人陶醉”。</p>
+	<p>【大纪元2018年03月03日讯】（大纪元美国斯坦福记者站报导）3月2日，美国东北部地区遭遇罕见的气旋风暴，康州的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%B8%82.md#1">斯坦福市</a>（Stamford）出现强风伴雨雪的天气。可是如此恶劣的天气也难以阻挡当地观众争相一睹“世界第一秀”的热情。当晚，美国<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在派雷斯剧院（Palace Theater）上演了第二场演出，加座卖的门票仍然全部售罄。</p>
+<p>要问为何<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出如此吸引人？看完神韵演出后的斯坦福地区主流界观众会告诉你：“她触动人的灵魂”、“演出美得让我流泪”、“扣人心弦”、“让人陶醉”。</p>
 <h2>总经理：神韵演出触动人的灵魂</h2>
 <figure id="attachment_10187852" aria-describedby="caption-attachment-10187852" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/180302235324100055.jpg"><img class="wp-image-10187852 size-medium" title="3月2日第2场7:30pm 斯坦福" src="https://i.epochtimes.com/assets/uploads/2018/03/180302235324100055-450x300.jpg" alt="3月2日第2场7:30pm 斯坦福" width="450" b="300" /></a><figcaption id="caption-attachment-10187852" class="wp-caption-text">Lydia Botero是大纽约地区一家建筑材料公司的总经理Lydia Botero，她看过3月2日晚的神韵演出之后表示，演出触动人的灵魂。（新唐人电视台）</figcaption></figure>
 <p>Lydia Botero是大纽约地区一家建筑材料公司的总经理，她看过3月2日晚的神韵演出之后激动地说，演出触动人的灵魂。</p>
-<p>“我非常喜爱，演出的故事既幽默又令人感动。”她说，她看到一对新婚夫妇因为坚守信仰而遭受迫害的舞剧时，流下了眼泪。“那个失明男士的<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>感人至深，我都看哭了。”</p>
-<p>“演出用<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演绎故事让我感同身受，这不仅仅是视觉的美感，而是以灵魂来感受，我真的被感动了，这是最打动我的。”她说。</p>
+<p>“我非常喜爱，演出的故事既幽默又令人感动。”她说，她看到一对新婚夫妇因为坚守信仰而遭受迫害的舞剧时，流下了眼泪。“那个失明男士的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>感人至深，我都看哭了。”</p>
+<p>“演出用<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演绎故事让我感同身受，这不仅仅是视觉的美感，而是以灵魂来感受，我真的被感动了，这是最打动我的。”她说。</p>
 <p>“我也非常喜欢筷子舞节目，既充满欢乐又绚丽多姿。”她说，“我也很喜欢演员们轻盈的身姿、（服装的）色彩。演员的舞姿动作就能讲述美丽的故事，让我非常陶醉。”</p>
 <p>她表示，她一定要让朋友都来看神韵，因为“太出色了”，“幽默的同时又充满教育意义，令人感动”。</p>
 <h2>艺术家：演出美得让我流泪</h2>
-<figure id="attachment_10187856" aria-describedby="caption-attachment-10187856" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/180302235329100055.jpg"><img class="wp-image-10187856 size-medium" title="3月2日第2场7:30pm 斯坦福" src="https://i.epochtimes.com/assets/uploads/2018/03/180302235329100055-450x300.jpg" alt="3月2日第2场7:30pm 斯坦福" width="450" b="300" /></a><figcaption id="caption-attachment-10187856" class="wp-caption-text">前芭蕾舞演员、作家John Brandt在康州<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%B8%82.md#1">斯坦福市</a>派雷斯剧院观看美国神韵北美艺术团3月2日晚的演出后，深深为之陶醉。（新唐人电视台）</figcaption></figure>
+<figure id="attachment_10187856" aria-describedby="caption-attachment-10187856" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/180302235329100055.jpg"><img class="wp-image-10187856 size-medium" title="3月2日第2场7:30pm 斯坦福" src="https://i.epochtimes.com/assets/uploads/2018/03/180302235329100055-450x300.jpg" alt="3月2日第2场7:30pm 斯坦福" width="450" b="300" /></a><figcaption id="caption-attachment-10187856" class="wp-caption-text">前芭蕾舞演员、作家John Brandt在康州<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%96%AF%E5%9D%A6%E7%A6%8F%E5%B8%82.md#1">斯坦福市</a>派雷斯剧院观看美国神韵北美艺术团3月2日晚的演出后，深深为之陶醉。（新唐人电视台）</figcaption></figure>
 <p>John Brandt是一位作家，在年轻的时候是位芭蕾舞演员，曾经在派雷斯剧院跳过《胡桃夹子》。他被神韵展示的中国古典舞所深深吸引。</p>
 <p>“观看神韵能如此令人心潮起伏，是因为所有元素合奏得精准与美。”他说，“那些舞蹈演员们在舞动之时，所有人如同一个人，非常、非常地扣人心弦，我深深为之陶醉。”</p>
 <p>他说，他真切地体会到了演员们在跳舞时的所思所想。“他们的动作在对我‘说话’，演出中有那么几个时刻，我流泪了，真的是太美了。”</p>
@@ -31,8 +31,8 @@
 <figure id="attachment_10187864" aria-describedby="caption-attachment-10187864" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/03/180303002856100055.jpg"><img class="wp-image-10187864 size-medium" title="3月2日第2场7:30pm 斯坦福" src="https://i.epochtimes.com/assets/uploads/2018/03/180303002856100055-450x300.jpg" alt="3月2日第2场7:30pm 斯坦福" width="450" b="300" /></a><figcaption id="caption-attachment-10187864" class="wp-caption-text">在纽约一家大型银行担任高级副总裁的Will Barnum看过3月2日的神韵演出后，感到意外的惊喜。（新唐人电视台）</figcaption></figure>
 <p>在纽约一家大型银行担任高级副总裁的Will Barnum看过3月2日的神韵演出后，感到意外的惊喜。他说，“演出非常精彩。来看演出前没有太多预期，但这场演出真是一个大惊喜，不少场景还充满幽默，非常好！”</p>
 <p>Barnum头一次欣赏中国古典舞，对所有神韵舞蹈演员们充满敬意，对他们整齐划一的舞姿、变幻无穷的编舞印象深刻。他说，“能达到那样的舞蹈境界，非常了不起的，是一场真正非常完美的演出。”</p>
-<p>神韵演出展示了五千年的中国传统文化，通过动人心弦的<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>与舞蹈，令神传文化再现辉煌。Barnum非常认同和敬佩神韵艺术家的努力，他说，“（通过舞蹈）回首五千年的中国历史和文化，是一个非常好的想法和实践，非常有意义。”</p>
-<p>Barnum对神韵演出中的现场乐团伴奏也赞叹不已，“悦耳的<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>，非常动听！”他进一步解释，在神韵晚会主持人介绍神韵乐团的中西乐器时，“我几乎听不出来这些乐器，因为乐团的演奏已达到如此高的谐和。”</p>
+<p>神韵演出展示了五千年的中国传统文化，通过动人心弦的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>与舞蹈，令神传文化再现辉煌。Barnum非常认同和敬佩神韵艺术家的努力，他说，“（通过舞蹈）回首五千年的中国历史和文化，是一个非常好的想法和实践，非常有意义。”</p>
+<p>Barnum对神韵演出中的现场乐团伴奏也赞叹不已，“悦耳的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>，非常动听！”他进一步解释，在神韵晚会主持人介绍神韵乐团的中西乐器时，“我几乎听不出来这些乐器，因为乐团的演奏已达到如此高的谐和。”</p>
 <p>除了神韵舞蹈的优美、故事的幽默以及独特的音乐让Barnum惊喜外，他也赞同神韵传递的信息：“我相信正面的东西，这对人大有裨益，我也认同演出传达的一切信息。”</p>
 <p>责任编辑：施萍</p>
 	
@@ -40,37 +40,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/2/27/n10178039.md#1">底特律11场演出圆满成功 观众感恩神韵价值观</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/2/n10184547.md#1">作家推崇顶尖文化秀 赞神韵之美难言喻</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/2/n10184749.md#1">集团公司总裁：神韵传递纯正中国传统文化</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/2/n10184907.md#1">体验神韵演出美妙 公司经理找到平和宁静</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/2/n10184966.md#1">医院总监赞誉神韵光彩夺目、卓越出色</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/2/n10185131.md#1">“最好的演出”康州斯坦福首迎神韵 加座爆满</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/2/27/n10178039.md#1">底特律11场演出圆满成功 观众感恩神韵价值观</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/2/n10184547.md#1">作家推崇顶尖文化秀 赞神韵之美难言喻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/2/n10184749.md#1">集团公司总裁：神韵传递纯正中国传统文化</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/2/n10184907.md#1">体验神韵演出美妙 公司经理找到平和宁静</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/2/n10184966.md#1">医院总监赞誉神韵光彩夺目、卓越出色</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/2/n10185131.md#1">“最好的演出”康州斯坦福首迎神韵 加座爆满</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196827.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(3)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10267172.md#1" target="_blank">许茹：迫害宗教或终止迫害 罗马皇帝不同命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fhwnic3872/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fhwnic3872/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/3/3/n10187720.htm">神韵触动灵魂 康州斯坦福观众感动落泪</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/3/3/n10187720.htm">神韵触动灵魂 康州斯坦福观众感动落泪</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fhwnic3872/djy/blob/master/gb/18/3/3/n10187720.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fhwnic3872/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fhwnic3872/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/18/3/3/n10187720.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
